# rtlil-mlir

./: CMakeLists.txt  LICENSE.isc  LICENSE.llvm  README.md  build_and_run.sh  flake.nix  print.ll  steps.sh  update-llvm.sh
hello-emit/: CMakeLists.txt  hello-emit.cpp
hello-opt/: hello-opt.cpp
include/: CMakeLists.txt
include/Hello/: HelloDialect.h  HelloPasses.h
include/RTLIL/: CMakeLists.txt  RTLILDialect.h  RTLILDialect.td  RTLILOps.h  RTLILOps.td  RTLILPasses.h  RTLILTypes.h
lib/Hello/: CMakeLists.txt
lib/RTLIL/: CMakeLists.txt  RTLILDialect.cpp  RTLILOps.cpp  RTLILTypes.cpp
nix/: buddy-llvm.nix  buddy-mlir.nix  overlay.nix  rtlil-mlir.nix
rtlil-emit/: CMakeLists.txt  rtlil-emit.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/RTLIL/: hello_world.mlir  print.mlir  sample-opt.mlir
